aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__jge__tests__jge_lit.snap
---
source: aya-parser/src/parser/instructions/jge.rs
expression: result
---
Instruction(
    JgeLit(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 15,
                end: 19,
            },
        ),
    ),
)
