aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__jge__tests__jge_reg.snap
---
source: aya-parser/src/parser/instructions/jge.rs
expression: result
---
Instruction(
    JgeReg(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
